--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     const customerName = "竹虎京堂"; const customerCode = "A2454"; 
-    const frequentCodes = ["C19B", "C14E", "C01", "C28A", "D82", "C58", "C61", "C41A", "D64BA", "C24A", "D18", "E11", "C14G", "C53B", "D47B", "C58AC", "C14DA", "C25A", "D16", "H01", "D48G", "C18E", "C39", "D59H", "C18A", "C25", "C39A", "D53", "E08AA", "C10A", "D10", "D39GA", "D88DA", "A07C", "C04", "C26C", "C36D", "C87B", "D09D", "D51", "D69", "B14AA", "C45", "D57A", "D58B", "D64AE", "C30C", "D15B", "D41AB", "C31F", "C44C", "D19E", "D50B", "D84"];
+    const frequentCodes = ["C19B", "C14E", "C01", "D82", "C28A", "C58", "C41A", "C61", "D18", "D64BA", "E11", "C24A", "D47B", "C53B", "C14DA", "C14G", "C25A", "D16", "C58AC", "H01", "D48G", "C18E", "D53", "C25", "C39", "C39A", "D59H", "D88DA", "E08AA", "A07C", "C10A", "C18A", "C26C", "D09D", "D10", "D39GA", "D69", "B14AA", "C04", "C36D", "C45", "D51", "D64AE", "C87B", "D41AB", "D57A", "D58B", "C30C", "C31F", "C44C", "D15B", "D19E", "D50B"];
     const eelProducts = ["D22J", "D22L", "D22", "D22C", "D22A", "D22D", "D22I", "D22G"];
     const weightedProducts = ["D61B", "D61C", "D18A", "D17E", "D17C", "B01", "D18"];
     const fullCatalog = [
