--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     const customerName = "竹虎京堂"; const customerCode = "A2454";
     const salesPhone = "85263771688"; 
     const storageKey = "zhuhu_jingtang_v9";
-    const frequentCodes = ["C19B", "C14E", "C01", "D82", "C28A", "C58", "C41A", "C61", "D18", "D64BA", "E11", "C24A", "D47B", "C53B", "C14DA", "C14G", "C25A", "D16", "C58AC", "H01", "D48G", "C18E", "D53", "C25", "C39", "C39A", "D59H", "D88DA", "E08AA", "A07C", "C10A", "C18A", "C26C", "D09D", "D10", "D39GA", "D69", "B14AA", "C04", "C36D", "C45", "D51", "D64AE", "C87B", "D41AB", "D57A", "D58B", "C30C", "C31F", "C44C", "D15B", "D19E", "D50B"];
-    const outOfStockCodes = ["C58AC","D58C","D10F","D10D","D09M","D09G"];
+    const frequentCodes = ["C19B", "C14E", "C01", "D82", "C28A", "C58", "C41A", "C61", "D18", "D64BA", "E11", "C24A", "D47B", "C53B", "C14DA", "C14G", "C25A", "D16",  "H01", "D48G", "C18E", "D53", "C25", "C39", "C39A", "D59H", "D88DA", "E08AA", "A07C", "C10A", "C18A", "C26C", "D09D", "D10", "D39GA", "D69", "B14AA", "C04", "C36D", "C45", "D51", "D64AE", "C87B", "D41AB", "D57A", "D58B", "C30C", "C31F", "C44C", "D15B", "D19E", "D50B"];
+    const outOfStockCodes = ["D58C","D10F","D10D","D09M","D09G"];
     let learnedFrequent = [];
     const eelProducts = ["D22J", "D22L", "D22", "D22C", "D22A", "D22D", "D22I", "D22G"];
     const weightedProducts = ["D61B", "D61C", "D18A", "D17E", "D17C", "B01", "D18"];
